--- a/app/views/admin/service_announcements/_form.html.haml
+++ b/app/views/admin/service_announcements/_form.html.haml
@@ -26,7 +26,7 @@
       .default.text Announcement
       .menu
         - ServiceAnnouncement.icons.each do |k, v|
-          .item{ data: { value: k } }
+          .item{ data: { value: k }, class: [ service_announcement.icon == k ? "active selected" : "" ] }
             %i.icon{ class: k }
             = k.humanize.capitalize
 
@@ -38,7 +38,7 @@
       .default.text Plain
       .menu
         - ServiceAnnouncement.colors.each do |k, v|
-          .item{ data: { value: k } }
+          .item{ data: { value: k }, class: [ service_announcement.color == k ? "active selected" : "" ] }
             %i.square.icon{ class: k }
             = k.humanize.capitalize
 
