--- a/app/views/bookmarks/_bookmarks_list.html.haml
+++ b/app/views/bookmarks/_bookmarks_list.html.haml
@@ -40,8 +40,12 @@
               %i.tags.icon
               = bookmark.tags.length
               = "tag".pluralize(bookmark.tags.length)
-            = link_to "offline cache", bookmark_cache_index_path(bookmark), data: { turbolinks: false }, class: "ui item"
+
+            - if bookmark.offline_caches.any?
+              = link_to "offline cache", bookmark_cache_index_path(bookmark), data: { turbolinks: false }, class: "ui item"
+
             = link_to "edit", edit_bookmark_path(bookmark), class: "ui item"
+
             .right.menu
               = modal_tag bookmark, url: bookmark_path(bookmark), template: "public/templates/bookmarks/delete" do
                 delete
