--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -15,8 +15,11 @@
       .ui.label{ class: [tag.color] }= tag.label
 
 .ui.fluid.text.menu
-  = link_to "offline cache", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "ui item"
+  - if @bookmark.offline_caches.any?
+    = link_to "offline cache", bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "ui item"
+
   = link_to "edit", edit_bookmark_path(@bookmark), class: "ui item"
+
   .right.menu
     = link_to "recache", bookmark_cache_index_path(@bookmark), method: :post, class: "ui item"
 
