--- a/app/views/profiles/_tabs.html.haml
+++ b/app/views/profiles/_tabs.html.haml
@@ -1,5 +1,5 @@
 .ui.tabular.menu
-  = active_link_to "Profile Settings", profile_path, class: "item"
+  = active_link_to "Profile Settings", profile_path, class: "item", active: :exclusive
   = active_link_to "Import", profile_import_index_path, class: "item"
   = active_link_to "Authorized Apps", oauth_authorized_applications_path, class: "item"
 
