--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -37,7 +37,7 @@
 
       .seven.wide.column
         %h4.ui.inverted.header transientBug
-        %p Dedicated to being the best storagemahjigger for bookmarks, with a dash of these newfangled anima-motion stillframes called "gah-iffs".
+        %p Dedicated to being the worst storagemahjigger for bookmarks, with a dash of these newfangled anima-motion still-frames called "gah-iffs".
 
     .ui.inverted.section.divider
 
