--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -24,7 +24,7 @@
       If the bug is a part of the Firefox extension, you should use #{ link_to "these Github issues", "https://github.com/transientBug/firefox-extension/issues" } instead.
 
     %p
-      For any issue first please make sure that you aren't making a duplicate of an existing report. Also, please include as much information as you can and be detailed in the actions leading to the bug. The more information I've got, the easier it is to track down the bug; Bonus points: I'll let you know when the bug is fixed, or which github pull request or trello card you can use to track the progress.
+      For any issue: please make sure that you aren't making a duplicate of an existing report. Also, please include as much information as you can and be detailed in the actions leading to the bug. The more information I've got, the easier it is to track down the bug; Bonus points: I'll let you know when the bug is fixed, or which github pull request or trello card you can use to track the progress.
 
     %p
       Alternatively, you can send an email to issues (at) transientbug.ninja and I can put it into a Github issue.
@@ -43,4 +43,4 @@
 %p
   %b.question Why am I getting an error for some caches?
   .answer
-    Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error.
+    Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error. tl;dr: No ones perfect.
