--- a/app/views/pages/privacy.html.haml
+++ b/app/views/pages/privacy.html.haml
@@ -8,7 +8,7 @@
   All user data is stored on transientBug servers, and the official web extensions only communicate with the transientBug API.
 
 %p
-  The following data sent by the official web extension when its page action is clicked: The active tabs Title and URL. That's it.
+  The following data is sent by the official web extension when its page action is clicked: The active tabs Title and URL. That's it.
 
 %p
   Additional details:
