--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -4,3 +4,4 @@
 %h2.ui.header Terms of Service
 
 %p
+  transientBug provides the service of bookmarking websites with no guarantees for anything :)
