--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -10,6 +10,11 @@
     I'm just a peep in search of that perfect bookmark.
 
 %p
+  %b.question What happens if you're ran over?
+  .answer
+    They tend to be a lot larger than me, so the car/bus/truck is probably going to need to clean their windshield and scrape an arm or leg off of their side mirror. Eventually the server funds will run out and transientBug will be shutdown by some automated billing process which will proceed to gleefully pat itself on the back and continue on with its harrowing existence.
+
+%p
   %b.question Can I make suggestions for new features?
   .answer
     Yup, you can either make an #{ link_to "issue", "https://github.com/transientBug/transientbug-rails/issues" } with the "suggestion" tag, or send an email to suggestions (at) transientbug.ninja and I'll look into it.
@@ -32,7 +37,7 @@
 %p
   %b.question Is there a place I can track what is in progress?
   .answer
-    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }. You can also check out the Github #{ link_to "pull requests", "https://github.com/transientBug/transientbug-rails/pulls" }.
+    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }. You can also check out the Github #{ link_to "pull requests", "https://github.com/transientBug/transientbug-rails/pulls" } for current in progress work.
 
 %h2.dividing.header Bookmarks
 %p
@@ -43,4 +48,9 @@
 %p
   %b.question Why am I getting an error for some caches?
   .answer
-    Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error. tl;dr: No ones perfect.
+    Tl;dr: No one is perfect. Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error.
+
+%p
+  %b.question How can I close my account?
+  .answer
+    Send an email to support (at) transienbug.ninja from the email you registered your account with and I'll be happy to close it as soon as I can. This is an un-reversible action and fully destroys your bookmarks and related data though.
