--- a/app/views/pages/privacy.html.haml
+++ b/app/views/pages/privacy.html.haml
@@ -22,3 +22,4 @@
     %li If there is a privacy breach, all users will be notified via the appropriate channels.
     %li If you find a privacy leak, please be responsible and report it discreetly to: me (at) transientbug.ninja
     %li Don't be stupid, don't share your login credentials without understanding the risks.
+    %li If you request your account to be closed, all your bookmarks, authorized apps, and developer apps are destroyed. Gone forever.
