some lang about backups

--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -53,4 +53,4 @@
 %p
   %b.question How can I close my account?
   .answer
-    Send an email to support (at) transienbug.ninja from the email you registered your account with and I'll be happy to close it as soon as I can. This is an un-reversible action and fully destroys your bookmarks and related data though.
+    Send an email to support (at) transienbug.ninja from the email you registered your account with and I'll be happy to close it as soon as I can. This is an un-reversible action and fully destroys your bookmarks, de-authorizes all your applications and destroys any of your developer OAuth applications.
