center footer because reasons

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -26,7 +26,7 @@
               %i.github.icon
               The codez
 
-      .three.wide.column
+      .four.wide.column
         %h4.ui.inverted.header All the Love!
         %p
           Made with
@@ -35,7 +35,7 @@
         %p
           in Boulder, Colorado
 
-      .seven.wide.column
+      .six.wide.column
         %h4.ui.inverted.header transientBug
         %p Dedicated to being the worst storagemahjigger for bookmarks, with a dash of these newfangled anima-motion still-frames called "gah-iffs".
 
