add a header to the faq

--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -50,6 +50,7 @@
   .answer
     Tl;dr: No one is perfect. Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error.
 
+%h2.dividing.header Account
 %p
   %b.question How can I close my account?
   .answer
