--- a/app/views/pages/faq.html.haml
+++ b/app/views/pages/faq.html.haml
@@ -17,27 +17,27 @@
 %p
   %b.question Can I make suggestions for new features?
   .answer
-    Yup, you can either make an #{ link_to "issue", "https://github.com/transientBug/transientbug-rails/issues" } with the "suggestion" tag, or send an email to suggestions (at) transientbug.ninja and I'll look into it.
+    Yup, you can either make an #{ link_to "issue on Github", "https://github.com/transientBug/transientbug-rails/issues" } with the "suggestion" tag, or send an email to suggestions (at) transientbug.ninja
 
 %p
   %b.question How can I report a bug?
   .answer
     %p
-      If it is a bug with the website, you should use #{ link_to "these Github issues", "https://github.com/transientBug/transientbug-rails/issues" }.
+      If it is a bug with the website, please create an issue in #{ link_to "this Github Repository", "https://github.com/transientBug/transientbug-rails/issues" }.
 
     %p
-      If the bug is a part of the Firefox extension, you should use #{ link_to "these Github issues", "https://github.com/transientBug/firefox-extension/issues" } instead.
+      If the bug is a part of the Firefox extension, please create an issue in #{ link_to "this Github Respository", "https://github.com/transientBug/firefox-extension/issues" }.
 
     %p
-      For any issue: please make sure that you aren't making a duplicate of an existing report. Also, please include as much information as you can and be detailed in the actions leading to the bug. The more information I've got, the easier it is to track down the bug; Bonus points: I'll let you know when the bug is fixed, or which github pull request or trello card you can use to track the progress.
+      For any issue: please include as much information as you can provide and be detailed in the actions leading to the bug. The more information I've got, the easier it is to track down the bug.
 
     %p
-      Alternatively, you can send an email to issues (at) transientbug.ninja and I can put it into a Github issue.
+      You can also send an email to issues (at) transientbug.ninja
 
 %p
   %b.question Is there a place I can track what is in progress?
   .answer
-    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }. You can also check out the Github #{ link_to "pull requests", "https://github.com/transientBug/transientbug-rails/pulls" } for current in progress work.
+    Sure is! #{ link_to "Check out this trello board", "https://trello.com/b/rcaslGoe" }. You can also check out the Pull Requests on Github #{ link_to "for current work", "https://github.com/transientBug/transientbug-rails/pulls" }.
 
 %h2.dividing.header Bookmarks
 %p
@@ -48,10 +48,10 @@
 %p
   %b.question Why am I getting an error for some caches?
   .answer
-    Tl;dr: No one is perfect. Chances are the page redirects too many times for transientBug to follow, or isn't a valid URL. I'm working on making transientBug smarter about handling these but sometimes that isn't good enough and the only thing transientBug can do is throw an error.
+    Caching a website turns out to be a difficult problem to solve, and while transientBug is getting smarter and better, sometimes the only thing it can do is complain loudly.
 
 %h2.dividing.header Account
 %p
   %b.question How can I close my account?
   .answer
-    Send an email to support (at) transienbug.ninja from the email you registered your account with and I'll be happy to close it as soon as I can. This is an un-reversible action and fully destroys your bookmarks, de-authorizes all your applications and destroys any of your developer OAuth applications.
+    Send an email to support (at) transienbug.ninja from the email you registered your account with and I'll be happy to close it. This is an un-reversible action and fully destroys your bookmarks, de-authorizes all your applications and destroys any of your developer OAuth applications.
