--- a/app/views/pages/main.html.haml
+++ b/app/views/pages/main.html.haml
@@ -7,10 +7,10 @@
   %ul.list
     %li
       %b Cheap
-      If it works out well I might look into some low cost plans, but for now its free. That being said, transientBug is currently in a closed, invite only registration right now, until it gets to a stable and complete feature-set that is ready for public use.
+      For now, it's free. transientBug is currently in a closed, invite-only registration, however, when it gets to a stable and complete feature-set that is ready for public use, that all might change.
     %li
-      %b Effective, Efficient but Advanced
-      I really want something that has one-click & painless bookmarking, but it should also be feature-full and advanced enough to not be just a toy.
+      %b Simple but Capable
+      I really want a tool that provides painless bookmarking while also providing more advanced features like caching, searching, organizing, and availability across devices.
     %li
       %b No Tracking
       This might be shocking, if you know me in real life as I work on an analytics team, but I don't want to be tracking every movement around the site that a user makes. No tracking or ads. Ever.
