working on updating a bit of the ui for the new search func

--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -5,4 +5,12 @@
 
 %h1 Search Results
 
-= render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @bookmarks }
+- if @bookmarks.errors.any?
+  %ul
+    - @bookmarks.errors.each do |k, v|
+      %li
+        = k
+        = v.join ", "
+
+- else
+  = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @bookmarks.each }
