add link in footer for chrome extension

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,6 +14,8 @@
             .item= link_to "Dev Auth", auth_path(:developer)
 
           .item= link_to "Firefox Extension", "https://github.com/transientBug/firefox-extension", data: { turbolinks: false }
+          .item= link_to "Chrome Extension", "https://github.com/transientBug/chrome-extension", data: { turbolinks: false }
+
           .item= link_to "Images", images_path
 
       .three.wide.column
