--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -77,11 +77,13 @@
             %td
               %code uri
             %td
+              The full uri of the bookmark, this is treated as a single term and does not include fuzzy matching.
 
           %tr
             %td
               %code host
             %td
+              The host, more commonly referred to as the bookmarks domain name, this works with both top level domains and sub-domains
 
           %tr
             %td
@@ -100,6 +102,7 @@
               %code tag
             %td
 
+
       %h3 Examples
       %table.ui.celled.table
         %thead
@@ -112,16 +115,17 @@
         %tbody
           %tr
             %td
-              %code -tags:
+              = link_to bookmarks_search_index_path(q: "-tags:") do
+                %code -tags:
             %td
               Find all bookmarks without tags
 
           %tr
             %td
-              %code +host:mozilla.org -host:developer.mozilla.org
+              = link_to bookmarks_search_index_path(q: "+host:mozilla.org -host:developer.mozilla.org") do
+                %code +host:mozilla.org -host:developer.mozilla.org
             %td
               Find all bookmarks from mozilla.org but exclude bookmarks from developer.mozilla.org
-
 
 
 - if @bookmarks.errors.any?
