thinking about the ruby side of things now a bit
this suffers the problem, as I've just realized, of not allowing for custom operations
or numbers of inputs (0 to X) easily, meaning that I can't have an exists clause that
takes no input but isn't available on every field of the same type. ie: shouldn't have
an exists on the host or uri input, but should have it on tags and title and description

--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -5,8 +5,7 @@
 
 %h1 Search Results
 
-.query_builder
-  = query_builder_config.to_json
+.query_builder= query_builder_config.to_json
 = javascript_pack_tag "query_builder"
 
 = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @bookmarks }
