--- a/app/views/bookmarks/search/index.html.haml
+++ b/app/views/bookmarks/search/index.html.haml
@@ -5,7 +5,7 @@
 
 %h1 Search Results
 
-.query_builder= query_builder_config.to_json
+.query_builder{ data: { url: bookmarks_search_index_path, method: "POST" } }= @query.to_json
 = javascript_pack_tag "query_builder"
 
 = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @bookmarks }
