--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -42,6 +42,10 @@ html, body{
   cursor: pointer;
 }
 
+.hidden {
+  display: none;
+}
+
 // Semantic UI has these classes, however they're only applicable to
 // grids, containers, rows and columns.
 // plus, there isn't any `mobile hidden`, `X hidden` class.
@@ -107,15 +111,5 @@ html, body{
   [class*="widescreen hidden"],
   [class*="widescreen or lower hidden"] {
     display: none !important;
-  }
-}
-
-.qb {
-  &.clause {
-    //display: flex;
-  }
-
-  &.group {
-    //margin-left: 1em;
   }
 }
