densify the bookmark list view

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -14,3 +14,18 @@
  *= require_self
  */
 @import "common";
+
+
+.bookmarks.list {
+  .item {
+    .inline {
+      .header {
+        display: inline-block;
+      }
+
+      .date {
+        display: inline-block;
+      }
+    }
+  }
+}
