--- a/app/views/bookmarks/_bookmarks_list.html.haml
+++ b/app/views/bookmarks/_bookmarks_list.html.haml
@@ -15,42 +15,25 @@
         %i.trash.icon
         delete all
 
-  .ui.feed
+  .ui.relaxed.divided.selection.bookmarks.list
     - bookmarks.each do |bookmark|
-      .event
-        .label
-          %i.bookmark.icon
+      .ui.item
+        .right.floated.content
+          - bookmark.tags.each do |tag|
+            = link_to bookmarks_tag_path(tag) do
+              .ui.label{ class: [tag.color] }= tag.label
         .content
-          .summary
+          .inline
             = model_tag bookmark, only: [:uri, :title]
 
-            = link_to bookmark.title, bookmark_path(bookmark), class: "title"
+            .header= link_to bookmark.title, bookmark_path(bookmark)
+
             .date
               = distance_of_time_in_words_to_now(bookmark.created_at)
               ago
 
-          = link_to bookmark.uri.to_s, bookmark.uri.to_s
-
-          - if bookmark.description.present?
-            = bookmark.description&.truncate(240)
-            = link_to "read more", bookmark_path(bookmark)
-
-          .ui.fluid.text.menu
-            .ui.item
-              %i.tags.icon
-              = bookmark.tags.length
-              = "tag".pluralize(bookmark.tags.length)
-
-            - if bookmark.offline_caches.any?
-              = link_to "offline cache", bookmark_cache_index_path(bookmark), data: { turbolinks: false }, class: "ui item"
-
-            = link_to "edit", edit_bookmark_path(bookmark), class: "ui item"
-
-            .right.menu
-              = modal_tag bookmark, url: bookmark_path(bookmark), template: "public/templates/bookmarks/delete" do
-                delete
-
-          .ui.divider
+          .description
+            = link_to bookmark.uri.to_s, bookmark.uri.to_s
 
 - else
   %h1.huge.center.aligned.icon.header
