basic css around the navbar search element
just enough to make it fit in for now, need to do a focus on mobile nav later

--- a/app/views/bookmarks/tags/show.html.haml
+++ b/app/views/bookmarks/tags/show.html.haml
@@ -1,9 +1,8 @@
 - content_for :page_title do
   Bookmarks Tagged '#{ @tag.label }'
 
-= render "bookmarks/navbar"
-
 %h1
-  .ui.massive.tag{ class: [ @tag.color ] }= @tag.label
+  Tag: 
+  .ui.massive.label{ class: [ @tag.color ] }= @tag.label
 
 = render partial: "bookmarks/bookmarks_list", locals: { bookmarks: @bookmarks }
