--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -31,13 +31,15 @@
 }
 
 .bookmark.search {
-  flex-grow: 1;
-  border-bottom: 1px solid black;
   display: flex;
+  flex-grow: 1;
+
+  background: #1B1C1D;
+  color: rgba(255, 255, 255, 0.9);
 
   & > .input {
-    flex-grow: 1;
     display: flex;
+    flex-grow: 1;
 
     & > form {
       flex-grow: 1;
@@ -47,6 +49,14 @@
         border-radius: 0;
         width: 100%;
         height: 100%;
+
+        background: #1B1C1D;
+        color: rgba(255, 255, 255, 0.9);
+
+        &:focus {
+          background: rgba(255, 255, 255, 0.15);
+          color: #ffffff !important;
+        }
       }
     }
   }
